# rust-advantages

./: Cargo.toml  README.md  diagrams.drawio  slides.md  structure.md
example-guardrails/: Cargo.toml
example-guardrails/src/: main.rs
example-server/: Cargo.toml
example-server/src/: main.rs
example-server/src/api/: events.rs  state.rs
