[workspace]
resolver = "2"

members = ["example-server"]

[workspace.package]
edition = "2021"
version = "0.1.0"
repository = "https://github.com/marekpsenka/rust-advantages"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version="1.12", features = ["v4"] }
